# orienteer

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  __main__.py  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 17df4ce4b5ae_sponsor_update_for_backmen.py  297b7481d309_add_choosing_promo_table.py  2e5ed9f756fd_before_seasons.py  347c1bbc82c6_economy_rewrite_1.py  3578151648d2_orientiks_cached_info.py  37c7160a6a3a_purchases_true_nullable_price.py  463ed07d6b4a_remove_discord_user_id_promo_usages.py  4afc89f1e066_sponsors_upgrade.py  707fa40b4586_seasons_upgrade.py  72c4d236c9f2_purchases_nullable_price.py  84606e16698a_big_int_discord_user_id.py  b7d9c3dfebf3_initial.py  ba2ac85301e8_add_ytpromo_code_usages_table.py  cc0096fbf325_sponsors_update.py  eeb573a0f200_seasons.py  f12096c7fb71_user_id_unique_fix.py
core/: api.py  bans.py  bot.py
core/checker/: bans.py
core/config/: main.py
core/data/: database.py  discord_time.py  orientiks.py  sponsor_data.py  ss14.py
core/debug/: errors_catcher.py  playtime_clamp.py  test_mode.py
core/info/: commands.py  leaderboard.py  tools.py
core/routes/: oauth2.py  sponsors.py
core/shop/: functions.py  slots.py
docker-compose/: storages.yaml
orienteer/: __main__.py
orienteer/api/: __main__.py
orienteer/api/routes/: authentication.py  orientiks.py  playtime.py  purchases.py  sponsors.py
orienteer/api/utils/: authentication.py  discord.py
orienteer/bot/: __main__.py
orienteer/bot/calls/: abstract.py  common.py  info.py  orientiks.py  owners.py  promo.py  sponsor.py  ytpromo.py
orienteer/bot/cogs/: common.py  info.py  orientiks.py  owners.py  promo.py  sponsor.py  ytpromo.py
orienteer/bot/utils/: checks.py  content_locale.py  embeds.py  extensions.py  params.py  ytpromo.py
orienteer/checker/: __main__.py
orienteer/checker/bans_checker/: __main__.py
templates/: base_template.html  success.html
tests/: __main__.py  all_trackers.py  fine_plot.py
tools/: all_trackers.py  fine_plot.py  html_templates.py  orienteer_db_speed_test.py
(+92 files in other folders)
