[tool.poetry]
name = "orienteer"
version = "0.1.0"
description = ""
authors = ["pguin-sudo <mailfordevelopmentandstuff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
disnake = "^2.9.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
loguru-discord = "^1.3.1"
g4f = "^0.3.2.2"
curl-cffi = "^0.7.1"
fastapi = "^0.111.1"
qrcode = "^7.4.2"
jinja2 = "^3.1.4"
matplotlib = "^3.9.1"
numpy = "^2.0.1"
schedule = "^1.2.2"
apscheduler = "^3.10.4"
aiocache = "^0.12.2"
asyncstdlib = "^3.12.4"
pandas = "^2.2.2"
mplcyberpunk = "^0.7.1"
setuptools = "^72.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
autoflake = "^2.3.1"
autotyping = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
